--- a/lamp_project/roles/mysql/tasks/main.yml
+++ b/lamp_project/roles/mysql/tasks/main.yml
@@ -1,14 +1,22 @@
 #SPDX-License-Identifier: MIT-0
 ---
 # tasks file for mysql
+#SPDX-License-Identifier: MIT-0
+---
+# tasks file for mysql
 - name: install mysql
-  package:
-    name: mariadb-server
+  dnf:
+    name: mysql-server
     state: present
-  notify: restart mariadb
+  #notify: restart mysql
 - name: start and enable mysql service
-  service:
-    name: mariadb
+  systemd:
+    name: mysqld
+    state: started
+    enabled: yes
+- name: ensure mysql is running
+  systemd:
+    name: mysqld
     state: started
     enabled: yes
 
